[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/ui/player_interface/joystick.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/joystick/joystick_background.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/joystick/joystick.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="joystick" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="joystickBackground" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -245.0
margin_right = 242.0
margin_bottom = -53.0
rect_pivot_offset = Vector2( 96, 96 )
texture = ExtResource( 2 )
expand = true

[node name="handle" type="TextureRect" parent="joystickBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 30, 30 )
texture = ExtResource( 3 )
expand = true

[node name="region_pos" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -320.0
margin_right = 410.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="region" type="TouchScreenButton" parent="region_pos"]
scale = Vector2( 20.5, 16 )
shape = SubResource( 1 )

[connection signal="pressed" from="region_pos/region" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="region_pos/region" to="." method="_on_TouchScreenButton_released"]
